<resources>
    <string name="app_name">Login Signup Activity</string>
    <string name="button">Button</string>
    <string name="password">Password :</string>
    <string name="username">Username :</string>
    <string name="sign_up_activity">Sign Up Activity</string>
    <string name="log_in_activity">Log In Activity</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_successful">Log In Successful</string>
    <string name="log_in">Log In</string>
</resources>